# data_outlier_detection

./: CMakeLists.txt  README.md  package.xml
script/: data_topic_check_big_pc.sh  data_topic_check_big_pc_car.sh  data_topic_check_fp_indoor.sh  data_topic_check_fp_outdoor.sh  data_topic_check_fp_outdoor_3dm.sh  data_topic_check_small_pc.sh
src/: data_topic_check_big_pc.cpp  data_topic_check_fp.cpp  data_topic_check_small_pc.cpp
